--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <main style="height: 10000px">
+    <main>
       <!-- HEDER -->
       <header class="header">
         <div class="content">
